--- a/app/assets/stylesheets/launchpad.css.scss
+++ b/app/assets/stylesheets/launchpad.css.scss
@@ -13,7 +13,7 @@ $success_color: #62c462;
   padding: 11px 11px 0 11px; 
   background-color: #F9F9F9;
   
-  h1 { font: bold 23px 'MuliRegular', 'Helvetica', 'Arial', sans-serif; margin:0px; width:868px; padding:0px; }
+  h1 { font: bold 23px 'MuliLight', 'Helvetica', 'Arial', sans-serif; margin:0px; width:868px; padding:0px; }
   h1>img { border-radius:4px; height:36px; width:36px; }
   h1>div { position:relative; bottom:8px; display:inline;}
   
