--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -3,7 +3,10 @@
     %div{ style: "margin-left: 6%; height: 100%;" }
       %div.brand{ style: "padding-top: 3px; width: 150px;" }
         = link_to root_url do
-          = image_tag("https://s3.amazonaws.com/moonlite-nsdub/static/MB+logo+nav+bar.png", alt: "MetaBright")
+          - if params[:new_logo]
+            -#
+          - else
+            = image_tag("https://s3.amazonaws.com/moonlite-nsdub/static/MB+logo+nav+bar.png", alt: "MetaBright")
       - if current_user and show_nav_bar and @admin_group
         %ul.nav.navicons{ style: "height: 100%; margin-left: 10px;border-left: 1px solid #020D25;" }
           %li.navitem{ title: "Evaluations", style: "height: 100%; border-left: 1px solid #56698B;" }
