--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,7 +1,7 @@
 %div.footer
   %span.copyright © 2013 MetaBright, Inc. /
   %span.footerlinks
-    = link_to "Employers", employers_path
+    = link_to "Evaluator", evaluator_path
     \/
     %a{href: "http://metabright.blogspot.com/", target: "_blank"} Blog
     \/
