--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -914,7 +914,27 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
   .body { 
     
     padding: 26px 16px; 
-  
+    
+    .pitch_tiles{
+      text-align: center;
+      
+      .tile {
+        display: inline-block;
+        width: 24%;
+        padding: 5px 35px;
+        text-align: center;
+      }
+      .circle {
+        border: 1px solid #e5e5e5;
+        border-radius: 50px;
+        margin: 0 auto 15px;
+        height: 100px;
+        width: 100px;
+      }
+      img { padding: 25px 0;}
+      h3 { text-align:left; }
+    }
+    
     h2 { 
       text-transform: uppercase;
       border-bottom: 1px solid rgba(0,0,0,0.1);
@@ -968,9 +988,9 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
       h3{ background: rgb(43, 43, 43);}
     
       &:hover{ box-shadow: 0 0 0px 5px rgba(0, 0, 0, 0.5); transform: scale(1.04) translateY(-5px); z-index: 1; border-bottom: 0 none; }
-      &:hover .price{ background:linear-gradient(#DB7224, #F9B84A); box-shadow: inset 0 0 45px 1px #DB7224; }
+      &:hover .price{ box-shadow: inset 0 0 45px 1px #DB7224; background-color: #e9b15b;}
       &:hover h3{ background: #222; }
-      &:hover .action_button{ background: linear-gradient(#F9B84A, #DB7224); }
+      &:hover .action_button{ background-color: #e9685b;  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);}
     }
     .price {
       display: table;
@@ -1008,7 +1028,7 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
       color: #fff;
       font-weight: bold;
       border-radius: 5px;
-      background: linear-gradient(#666, #333);
+      background-color: gray;
       padding: 5px 20px;
       font-size: 13px;
       text-transform: uppercase;
@@ -1538,9 +1558,9 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
 
 /* Upheaval Landing Page */
 
-$landing_red: #F68C81;
-$landing_yellow: #F6C881;
-$landing_green: #72DA89;
+$landing_red: #dc7563;
+$landing_yellow: #e3b164;
+$landing_green: #73bb6e;
 
 #upheaval{
   .main_splash {
@@ -1551,14 +1571,14 @@ $landing_green: #72DA89;
       }
       .span5{
         .consumer, .employer { height: 50%; padding: 0 10px; }
-        .consumer { background-color: desaturate(darken($landing_red, 10%), 10%);  }
-        .employer { background-color: desaturate(darken($landing_yellow, 10%), 10%); } 
+        .consumer { background-color: $landing_red;  }
+        .employer { background-color: $landing_yellow; } 
         .option { padding: 24px 20px; color: white; }
       }
     }
   }
   .happy_users {
-    background-color: desaturate(darken($landing_green, 10%), 10%);
+    background-color: $landing_green;
   }
   .challenge_showcase{
     margin-bottom: 70px;
