--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -1,6 +1,7 @@
 :css
   body{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
-  .aboutcontainer{ width: 950px; background: rgba(36, 72, 109, 0.8);}
+  .aboutcontainer{ width: 940px; background: rgba(36, 72, 109, 0.8); border-radius: 0;}
+  .aboutbox { border-radius: 0; padding: 20px; }
   
 <script src="https://raw.github.com/LeaVerou/prefixfree/gh-pages/prefixfree.min.js" type="text/javascript"></script>
 
@@ -23,10 +24,24 @@
         %h3 
           How it works
         %ol
-          %li Choose the skills where you want your candidates measured.
+          %li Choose the skills in which you want your candidates measured.
           %li We'll give you a unique MetaBright URL.
           %li Include your this URL with your job posting. 
           %li MetaBright evaluates the skills of each candidate, and you decide who to interview. 
+        .pitch_tiles
+          %h3 Why you'll love MetaBright
+          .tile
+            .circle
+              = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/medal_green.png"
+            %p Choose from over 40 MetaBright skills, or create your own for your company.
+          .tile
+            .circle
+              = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/group_green.png"
+            %p Expand your candidate pool, and quickly identify top performers.
+          .tile
+            .circle
+              = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/clock_green.png"
+            %p Never waste your time interviewing another underqualified candidate.
         %h3 FAQ
         #faq_accordion.accordion          
           .accordion-group
@@ -37,14 +52,6 @@
               .accordion-inner
                 We evaluate your candidates with things called <strong>Challenges</strong> -- fancy quizzes that analyze people's raw knowledge, their creative ability, and what they’ve accomplished. 
                 We distill all this information down into one easy to understand percentile ranking that indicates how capable a candidate actually is.
-          .accordion-group
-            .accordion-heading
-              %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseThree"}
-                How many Challenges do I need?
-            #collapseThree.accordion-body.collapse
-              .accordion-inner
-                Anticipate which skills you want your candidates evaluated on. Multiply this count by the number of candidates you expect to measure. 
-                (It’s typically best to get more Challenges than you think you’ll need because your unused Challenges will roll over from the previous month.)
           .accordion-group
             .accordion-heading
               %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseFour"}
@@ -60,6 +67,7 @@
               .accordion-inner
                 MetaBright questions are timed so we have a good understanding of who actually knows the material and who is trying to cheat (or who is getting lucky with a guess!). 
                 Our algorithms look for irregularities when a candidate is taking a Challenge and adjust their percentile accordingly.
+                We also work to ensure that your candidate is actually the one taking the Challenge.
           .accordion-group
             .accordion-heading
               %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseSix"}
@@ -73,47 +81,51 @@
         %div  
           %ul.pricing_table
             %li.price_block
-              %h3 Basic
+              %h3 1 User
               .price
                 .price_figure
-                  %span.price_number $10
-                  %span.price_tenure per user, per month
+                  %span.price_number $9.99
+                  %span.price_tenure per month
               %ul.features
-                %li 10 Challenges
-                %li --
+                %li Unlimited Evaluations and Candidates
+                %li Talent Search Tool
+                %li Premium Support
               .price_footer
                 = link_to "Select", new_group_path(p: Opportunity::EVAL_BASIC), class: "action_button"
             %li.price_block
-              %h3 Professional
+              %h3 2-5 Users
               .price
                 .price_figure
-                  %span.price_number $49
-                  %span.price_tenure per user, per month
+                  %span.price_number $19.99
+                  %span.price_tenure per month
               %ul.features
-                %li 100 Challenges
-                %li Email support
+                %li Unlimited Evaluations and Candidates
+                %li Talent Search Tool
+                %li Premium Support
               .price_footer
                 = link_to "Select", new_group_path(p: Opportunity::EVAL_PRO), class: "action_button"
             %li.price_block
-              %h3 Enterprise
+              %h3 6-15 Users
               .price
                 .price_figure
-                  %span.price_number $199
-                  %span.price_tenure per user, per month
+                  %span.price_number $39.99
+                  %span.price_tenure per month
               %ul.features
-                %li 500 Challenges
-                %li Email and phone support
+                %li Unlimited Evaluations and Candidates
+                %li Talent Search Tool
+                %li Premium Support
               .price_footer
                 = link_to "Select", new_group_path(p: Opportunity::EVAL_ENT), class: "action_button"
             %li.price_block
-              %h3 Ultimate
+              %h3 16-50 Users
               .price
                 .price_figure
-                  %span.price_number $299
-                  %span.price_tenure per user, per month
+                  %span.price_number $79.99
+                  %span.price_tenure per month
               %ul.features
-                %li 1,000 Challenges
-                %li Email and phone support
+                %li Unlimited Evaluations and Candidates
+                %li Talent Search Tool
+                %li Premium Support
               .price_footer
                 = link_to "Select", new_group_path(p: Opportunity::EVAL_ULTRA), class: "action_button"
         
