--- a/app/views/pages/upheaval.html.haml
+++ b/app/views/pages/upheaval.html.haml
@@ -117,7 +117,8 @@
           .option
             %h4{ style: "font-size: 1.6em; margin-bottom: 10px; color: white; "} I want better candidates.
             %p{ style: "font-size: 15px; "} The MetaBright Evaluator validates the skills of your job candidates before you interview them.
-            %button.button{ style: "float: right; background-color: rgb(231, 231, 231);"} Learn More
+            %button.button{ style: "float: right; background-color: rgb(231, 231, 231);"}
+              = link_to "Learn More", evaluator_path
   .row-fluid.happy_users
     .container
       .span12
