added copy for >50 users

--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -970,6 +970,7 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
       margin: 10px auto;
       padding-top: 10px;
       text-align: center; 
+      height: 340px;
       
       h3{ text-transform: uppercase; padding: 5px 0; background: #333; margin: -10px 0 1px 0; }
     
