--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -128,4 +128,7 @@
                 %li Premium Support
               .price_footer
                 = link_to "Select", new_group_path(p: Opportunity::EVAL_ULTRA), class: "action_button"
+          %p{ style: "margin: 0; float: right;"}
+            Have more than 50 users? 
+            %a{href: "mailto:support@metabright.com?subject=Inquiry for more than 50 Evaluator users"}Contact us for pricing.
         
