--- a/app/views/groups/signup/checkout.html.haml
+++ b/app/views/groups/signup/checkout.html.haml
@@ -1,6 +1,8 @@
 :css
   body{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
-  .aboutcontainer{ width: 950px; background: rgba(36, 72, 109, 0.8); }
+  .container.body { padding: 0; background-color: transparent;   }
+  .aboutcontainer{ width: 760px; background: rgba(36, 72, 109, 0.8); border-radius: 0; margin-top:27px;}
+  .aboutbox { border-radius: 0; padding: 20px; }
   .payment-errors { margin: 20px 0 5px 0; color: red; font-size: 17px; }
 %script
   $(function(){ $.MB.Checkout.init(); });
@@ -14,32 +16,31 @@
       $("input[data-stripe='exp-year']").val("2018");
     })
 
-#employer1.aboutcontainer
+#employer_product.aboutcontainer
   .aboutbox
     .aboutheader
       %img{ src: STONEY_SMALL_URL, alt: "Stoney"}
-      %span Turbocharge your hiring
-    .body
+      %div{ style: "display: inline-block; vertical-align: top; margin-top: 31px;"}
+        %h1{ style: "margin-top:0;" } MetaBright Evaluator
+        %h3 Order Checkout (Step 2 of 2)
+    .body{ style: "padding-bottom: 0; padding-top: 6px;" }
       %div
         = form_for(@group, url: checkout_group_url(@group), remote: true, html: { class: "form-horizontal", id: "new_subscription" }) do |f|
           = f.hidden_field :stripe_token
+          %p.payment-errors= @error
+          %label Card Number
+          %input{ type: "text", size: 20, data: { stripe: "number" }, style: "width: 24ex;" }
+          %label CVC
+          %input{ type: "text", size: 4, data: { stripe: "cvc" }, class: "input-small", style: "width: 3em;" }
+          %label Expiration (MM/YYYY)
+          %input{ type: "text", size: 2, data: { stripe: "exp-month" }, placeholder: "MM", class: "input-small", style: "width: 1.5em;" }
+          %span /
+          %input{ type: "text", size: 4, data: { stripe: "exp-year" }, placeholder: "YYYY", class: "input-small", style: "width: 3em;" }
+          
+          / To Do
+          %label Coupon (Optional)
+          %input
+          
           .control-group
             .controls
-              %p.payment-errors= @error
-          .control-group
-            %label.control-label Card Number
-            .controls
-              %input{ type: "text", size: 20, data: { stripe: "number" }, style: "width: 24ex;" }
-          .control-group
-            %label.control-label CVC
-            .controls
-              %input{ type: "text", size: 4, data: { stripe: "cvc" }, class: "input-small", style: "width: inherit;" }
-          .control-group
-            %label.control-label Expiration (MM/YYYY)
-            .controls
-              %input{ type: "text", size: 2, data: { stripe: "exp-month" }, placeholder: "MM", class: "input-small", style: "width: 2em;" }
-              /
-              %input{ type: "text", size: 4, data: { stripe: "exp-year" }, placeholder: "YYYY", class: "input-small", style: "width: 4em;" }
-          .control-group
-            .controls
-              %input{ type: "submit", value: "Checkout", class: "button button-actionable" }
+              %input{ type: "submit", value: "Checkout", class: "submit" }
