--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -963,6 +963,19 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
         padding: 7px 20px 5px 20px;
         &:hover{ box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2); }
       }
+      .checkout_tt1, .checkout_tt2 {
+        display: inline-block;
+        
+        img { width: 16px; height: 16px; display: inline-block; margin-bottom: 6px; }
+      }
+      .checkout_tt1 { 
+        [data-tip]:after { left: -20px; }
+        [data-tip]:before { left: 3px; } 
+      }
+      .checkout_tt2 {
+        [data-tip]:after { left: -36px; white-space: normal; height: 108px; width: 261px; top: -125px; }
+        [data-tip]:before { left: 3px; }
+      }
       label {
         display: block;
         font-size: 16px; 
